# reflect

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_cperf
src/: argument.cpp  argument.h  argument.tcc  callable.h  cast.cpp  cast.h  clean_type.h  concept.h  error.cpp  error.h  field.cpp  field.h  field.tcc  function.cpp  function.h  function.tcc  function_traits.h  function_type.h  macros.h  make_function.h  namespace.cpp  namespace.h  namespace.tcc  overloads.cpp  overloads.h  overloads.tcc  pack.h  ref_type.cpp  ref_type.h  reflect.cpp  reflect.h  reflection.cpp  reflection.h  registry.cpp  registry.h  scope.cpp  scope.h  scope.tcc  signature.cpp  signature.h  (+15 more)
src/concepts/: plumbing.h
src/dsl/: all.h  basics.h  field.h  function.h  operators.h  plumbing.h  scope.h  template.h  type.h
src/functions/: copy_alloc.h  copy_assign.h  copy_construct.h  default_alloc.h  default_construct.h  move_alloc.h  move_assign.h  move_construct.h  plumbing.h
src/reflect/: all.h  basics.h  class.h  constructor.h  field.h  function.h  names.h  namespace.h  operators.h  plumbing.h  template.h  type.h
src/types/: bool.cpp  bool.h  int.h  number.cpp  number.h  number.tcc  number_aliases.cpp  number_char.cpp  number_float.cpp  number_int.cpp  number_long.cpp  pointer.h  primitive_bool.cpp  primitive_char.cpp  primitive_float.cpp  primitive_int.cpp  primitive_long.cpp  primitive_long_long.cpp  primitive_short.cpp  primitive_void.cpp  primitives.cpp  primitives.h  primitives.tcc  value.cpp  value.h  void.cpp  void.h
src/types/reflect/: type.cpp  type.h  value.cpp  value.h
src/types/std/: map.h  smart_ptr.h  string.cpp  string.h  vector.h
src/utils/: config.cpp  config.h  json.h  path.cpp  path.h
src/utils/config/: compile.cpp  config.cpp  config.h  config.tcc  includes.h  json.cpp  json.h  node.cpp  node.h  notes.txt  path.cpp  path.h  path.tcc
src/utils/json/: error.h  format.cpp  format.h  json.cpp  json.h  parser.cpp  parser.h  parser.tcc  printer.cpp  printer.h  printer.tcc  reader.cpp  reader.h  reader.tcc  token.cpp  token.h  traits.cpp  traits.h  utils.h  writer.cpp  writer.h  writer.tcc
src/utils/json/old/: context.h  json.cpp  token.cpp
tests/: blah_test.cpp  cast_test.cpp  config_test.cpp  cperf_reflect_args_test.cpp  cperf_type_lookup_test.cpp  cubes_test.cpp  demo_test.cpp  field_test.cpp  function_test.cpp  json_test.cpp  namespace_test.cpp  path_test.cpp  pointer_test.cpp  ref_test.cpp  reflection_test.cpp  scope_test.cpp  signals.h  test_types.cpp  test_types.h  tests.h  type_test.cpp  value_function_test.cpp  value_test.cpp
tests/cperf/: cperf.h  plumbing_test.cpp  reflect_args_test.cpp  reflect_getter_test.cpp  reflect_plumbing_test.cpp  reflect_setter_test.cpp  reflect_template_test.cpp  results.org  type_lookup_test.cpp
tests/data/: cubes.json
tests/json/: basics.json
tests/utils/json/: basic_test.cpp  basics.json  format_test.cpp  generic.json  parser_test.cpp  printer_test.cpp  printer_utils.h  reader_test.cpp  test_types.cpp  test_types.h  value_parser.json  value_parser_test.cpp  value_printer_compact.json  value_printer_full.json  value_printer_test.cpp
